<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/main_layout"
    tools:context=".views.list.PhotoListActivity">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/appbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/colorPrimary">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?actionBarSize" >

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <ImageView
                    android:id="@+id/imageview_app_icon"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintBottom_toBottomOf="parent"
                    android:src="@drawable/ic_image_search"
                    app:tint="@color/white"
                    android:contentDescription="@string/app_icon" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:layout_constraintStart_toEndOf="@+id/imageview_app_icon"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintBottom_toBottomOf="parent"
                    android:layout_marginStart="8dp"
                    android:text="@string/app_name"
                    android:textColor="@color/white"
                    android:textSize="18sp"
                    android:contentDescription="@string/app_name" />

            </androidx.constraintlayout.widget.ConstraintLayout>
        </androidx.appcompat.widget.Toolbar>
    </com.google.android.material.appbar.AppBarLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="?actionBarSize"
        android:padding="12dp">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/layout_search"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:background="@drawable/bg_edittext"
            android:padding="8dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <EditText
                android:id="@+id/edittext_search"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="8dp"
                android:autofillHints="null"
                android:background="@android:color/transparent"
                android:hint="@string/search_photo"
                android:imeOptions="actionSearch"
                android:inputType="textPersonName"
                android:paddingVertical="4dp"
                android:textColorHint="#757575"
                android:textSize="14sp"
                app:layout_constraintEnd_toStartOf="@+id/progressbar"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <ProgressBar
                android:id="@+id/progressbar"
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:layout_marginEnd="8dp"
                android:contentDescription="@string/loading"
                app:layout_constraintBottom_toBottomOf="@+id/edittext_search"
                app:layout_constraintEnd_toStartOf="@+id/imageview_search"
                app:layout_constraintStart_toEndOf="@+id/edittext_search"
                app:layout_constraintTop_toTopOf="@+id/edittext_search" />

            <ImageView
                android:id="@+id/imageview_search"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:contentDescription="@string/search"
                android:src="@drawable/ic_search"
                app:layout_constraintBottom_toBottomOf="@+id/edittext_search"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/progressbar"
                app:layout_constraintTop_toTopOf="@+id/edittext_search" />
        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recyclerview_photos"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginTop="8dp"
            android:overScrollMode="never"
            app:layoutManager="androidx.recyclerview.widget.GridLayoutManager"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/layout_search"
            app:spanCount="2" />

        <TextView
            android:id="@+id/textview_search_title"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:paddingHorizontal="4dp"
            android:text="@string/recent_searches"
            android:textColor="@color/grey"
            android:textSize="16sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/layout_search" />

        <TextView
            android:id="@+id/textview_search_caption"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:gravity="center"
            android:paddingHorizontal="8dp"
            android:text="@string/search_caption"
            android:textColor="@color/grey"
            android:textSize="12sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textview_search_title" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recyclerview_searches"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginTop="8dp"
            android:overScrollMode="never"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textview_search_title"
            tools:listitem="@layout/item_recent_search" />

        <androidx.constraintlayout.widget.Group
            android:id="@+id/group_recent_search"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:constraint_referenced_ids="textview_search_title, recyclerview_searches" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.coordinatorlayout.widget.CoordinatorLayout>